# fieldwork-skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  skill_request.md
chatgpt-search/: .gitignore  README.md  SKILL.md  UPDATE-GUIDE.md  pyproject.toml
chatgpt-search/scripts/: setup.sh
chatgpt-search/src/chatgpt_search/: cli.py  indexer.py  languages.py  models.py  searcher.py  utils.py
chatgpt-search/tests/: test_enrichment.py  test_indexer.py  test_languages.py  test_searcher.py
chatgpt-search/tests/fixtures/: sample_conversations.json
skills/agent-mux/: README.md  SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/browser-ops/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/browser-ops/references/: anti-detection-guide.md  battle-tested-patterns.md  failure-log.md  headed-browser-playbook.md  installation-guide.md  stealth-config.md  test-results.md  tool-inventory.md
skills/browser-ops/scripts/: agentmail.sh  mailbox.py  (+2 more)
skills/chatgpt-search/: .gitignore  README.md  SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/google-workspace-ops/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/gsd-coordinator/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/image-gen/: .gitignore  README.md  SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/peekaboo/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/summarize/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/vault/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/video-gen/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
skills/web-search/: SKILL.md  UPDATE-GUIDE.md  UPDATES.md
(+98 files in other folders)
