[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-search"
version = "0.3.0"
description = "Search ChatGPT conversation exports using SQLite FTS5"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nick Oak"}]
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "langdetect>=1.0.9",
]

[project.scripts]
chatgpt-search = "chatgpt_search.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
